the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: dockersifath/todo-app:1.13
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: todo-storage
              mountPath: /app/storage
      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-app-pvc
