the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 1234        # Cluster internal port
      targetPort: 4444  # Container port
